# OOP_lab2

./: README.md
josephus_problem-pomrgite/: CMakeLists.txt  readme.md
josephus_problem-pomrgite/src/: library.cpp
josephus_problem-pomrgite/tests/: test_basic.cpp
subarrays_task-pomrgite/: readme.md
subarrays_task-pomrgite/include/: library.hpp
subarrays_task-pomrgite/src/: library.cpp
subarrays_task-pomrgite/tests/: test_basic.cpp
timer_manager-pomrgite/: CMakeLists.txt
timer_manager-pomrgite/include/: library.hpp
timer_manager-pomrgite/src/: library.cpp
